Date: Thu,  7 Jul 2016 22:43:03 +0000
Mime-Version: 1.0 (Produced by PhpWiki 1.5.5)
Content-Type: application/x-phpwiki;
  pagename=ReleaseNotes;
  flags=PAGE_LOCKED;
  charset=UTF-8
Content-Transfer-Encoding: binary

<<CreateToc with_toclink||=1 headers||=1,2,3 width=300px position=right>>

== 1.5.6 2016-XX-XX Marc-Etienne Vargenau ==

* Update jQuery to 2.2.4: Internet Explorer <= 8 no longer supported
* Remove wrong calls to setTightness in lib/InlineParser.php (bug reported by Harold Hallikainen)
* Pear: use ##mysqli## instead of ##mysql##
* Replace ##ereg## functions
* ~UpLoad plugin: put date and author in history
* ~UpLoad plugin: don't inline images
* phpweather-2.2.2 included in PhpWiki; ~PhpWeather plugin allowed in Fusionforge
* ~HtmlConverter plugin: check file is encoded in UTF-8; ~HtmlConverter plugin allowed in Fusionforge
* Valid HTML5 and CSS3 logos (in debug mode)
* Add HTML 5 <main> <header> <footer> <nav> in all themes
* Better is_localhost() function (allow IPv6, allow Windows IIS). Patch by Thierry Nabeth.
* Repair PhotoAlbumPlugin

== 1.5.5 2015-12-11 Marc-Etienne Vargenau ==

* Fix tooltip translation in ~CreateToc plugin
* Remove access keys
* Check MAX_PAGENAME_LENGTH in CreatePage
* Fix fatal database error with multiple comma-delimited sortby args
* Remove forbidden characters: ~<~>~[~]~{~}~"~|~# from pagename
* New property: ALLOWED_LOAD giving list of directories from which it is allowed to load pages.
* Upload~: replace multiple spaces by single space
* Make functions merged and is_conflict public in lib/diff3.php (support request #162)

== 1.5.4 2015-06-29 Marc-Etienne Vargenau ==

* Fix ~WantedPages for Fusionforge
* Remove ~WantedPagesOld (use ~WantedPages instead)
* Add WebM format in Video plugin
* Update jscalendar to 1.0
* Remove Width and Height preferences modification in Edit Toolbar
* New icons in Edit Toolbar
* Make static templates in Edit Toolbar work
* Fix memory_limit for WIKI_SOAP
* Remove ~MockRequest